--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -401,7 +401,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                    <td height="40" style="font-size: 0; line-height:32px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
@@ -414,7 +414,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="45" style="font-size: 0; line-height:40px;">&nbsp;</td>
+                    <td height="50" style="font-size: 0; line-height:40px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td align="center" valign="top">
@@ -1069,74 +1069,7 @@
                       </table>
                     </td>
                   </tr>
-                  <!--[if !mso 9]><!-->
-                  <tr class="mobile-visible">
-                    <td height="0" align="center" valign="top">
-                      <div
-                        class="gmail"
-                        style="display:none; line-height:0px; float:left; mso-hide: all; width:0; overflow:hidden; max-height:0;"
-                      >
-                        <table
-                          width="100%"
-                          align="center"
-                          cellpadding="0"
-                          cellspacing="0"
-                          border="0"
-                          style="border-collapse: collapse;"
-                        >
-                          <tr>
-                            <td height="40" style="font-size: 0; line-height:20px;">&nbsp;</td>
-                          </tr>
-                          <tr>
-                            <td align="center" valign="top">
-                              <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
-                                <tr>
-                                  <td width="48%" align="center" valign="top">
-                                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
-                                      <tr>
-                                        <td
-                                          bgcolor="#2DA577"
-                                          style="padding: 16px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 500;font-size: 20px; line-height: 24px; white-space: nowrap;"
-                                          align="center"
-                                        >
-                                          <a
-                                            href="{{ acceptLink }}"
-                                            target="_blank"
-                                            style="color: #ffffff; text-decoration: none; display: inline-block;"
-                                            >Accept</a
-                                          >
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </td>
-                                  <td width="4%">&nbsp;</td>
-                                  <td width="48%" align="center" valign="top">
-                                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
-                                      <tr>
-                                        <td
-                                          bgcolor="#DB7575"
-                                          style="padding: 16px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 500;font-size: 20px; line-height: 24px; white-space: nowrap;"
-                                          align="center"
-                                        >
-                                          <a
-                                            href="{{ declineLink }}"
-                                            target="_blank"
-                                            style="color: #ffffff; text-decoration: none; display: inline-block;"
-                                            >Decline</a
-                                          >
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                      </div>
-                    </td>
-                  </tr>
-                  <!--<![endif]-->
+    
                   <tr>
                     <td height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
                   </tr>
@@ -1178,7 +1111,75 @@
                   </tr>
                
                   {{/if}}
-                  <tr>
+                  <!--[if !mso 9]><!-->
+                    <tr class="mobile-visible">
+                      <td height="0" align="center" valign="top">
+                        <div
+                          class="gmail"
+                          style="display:none; line-height:0px; float:left; mso-hide: all; width:0; overflow:hidden; max-height:0;"
+                        >
+                          <table
+                            width="100%"
+                            align="center"
+                            cellpadding="0"
+                            cellspacing="0"
+                            border="0"
+                            style="border-collapse: collapse;"
+                          >
+                            <tr>
+                              <td height="45" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                            </tr>
+                            <tr>
+                              <td align="center" valign="top">
+                                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                                  <tr>
+                                    <td width="48%" align="center" valign="top">
+                                      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                          <td
+                                            bgcolor="#2DA577"
+                                            style="padding: 16px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 500;font-size: 20px; line-height: 24px; white-space: nowrap;"
+                                            align="center"
+                                          >
+                                            <a
+                                              href="{{ acceptLink }}"
+                                              target="_blank"
+                                              style="color: #ffffff; text-decoration: none; display: inline-block;"
+                                              >Accept</a
+                                            >
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </td>
+                                    <td width="4%">&nbsp;</td>
+                                    <td width="48%" align="center" valign="top">
+                                      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                          <td
+                                            bgcolor="#DB7575"
+                                            style="padding: 16px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 500;font-size: 20px; line-height: 24px; white-space: nowrap;"
+                                            align="center"
+                                          >
+                                            <a
+                                              href="{{ declineLink }}"
+                                              target="_blank"
+                                              style="color: #ffffff; text-decoration: none; display: inline-block;"
+                                              >Decline</a
+                                            >
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+                        </div>
+                      </td>
+                    </tr>
+                    <!--<![endif]-->
+                  <tr class="mobile-hide"> 
                     <td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td>
                   </tr>
                   <tr class="mobile-hide">
