--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -162,11 +162,12 @@
           max-height: inherit !important;
         }
         .full_img480 {
-          width: 100% !important;
-          height: auto !important;
-          border-top-left-radius: 8px !important;
-          border-top-right-radius: 8px !important;
-          border-bottom-left-radius: 0px !important;
+            width: 100%!important;
+            height: auto!important;
+            max-width: 100%!important;
+            border-top-left-radius: 8px!important;
+            border-top-right-radius: 8px!important;
+            border-bottom-left-radius: 0px!important;
         }
         .container480 {
           width: 100% !important;
