--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -162,11 +162,12 @@
           max-height: inherit !important;
         }
         .full_img480 {
-          width: 100% !important;
-          height: auto !important;
-          border-top-left-radius: 8px !important;
-          border-top-right-radius: 8px !important;
-          border-bottom-left-radius: 0px !important;
+          width: 100%!important;
+          height: auto!important;
+          max-width: 100%!important;
+          border-top-left-radius: 8px!important;
+          border-top-right-radius: 8px!important;
+          border-bottom-left-radius: 0px!important;
         }
         .container480 {
           width: 100% !important;
@@ -402,7 +403,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="45" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                    <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
@@ -415,8 +416,8 @@
                     </td>
                   </tr>
                           
-                  <tr class="mobile-hide">
-                    <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                  <tr>
+                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td align="center" valign="top">
@@ -751,7 +752,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="60" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;">&nbsp;</td>
                   </tr>
          
                   <tr>
@@ -766,7 +767,8 @@
                               width="113"
                               height="113"
                               border="0"
-                              style="display: block; outline: none;border-radius: 50%;object-fit: cover;"
+                              style="display: block; outline: none;border-radius: 50%;object-fit: cover;width:110px; height:110px"  width="110"
+                              height="110"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
@@ -828,7 +830,7 @@
                     </td>
                   </tr> -->
                   <tr>
-                    <td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td align="center" valign="top">
@@ -1087,7 +1089,7 @@
                           style="border-collapse: collapse;"
                         >
                           <tr>
-                            <td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                            <td height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
                           </tr>
                           <tr>
                             <td align="center" valign="top">
@@ -1114,12 +1116,8 @@
                     </td>
                   </tr>
                   <!--<![endif]-->
-                  <tr>
-                    <td height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
-                  </tr>
-
-                  <tr>
-                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
+                  <tr class="mobile-hide">
+                    <td height="80" style="font-size: 0; line-height:80px;">&nbsp;</td>
                   </tr>
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
@@ -1142,7 +1140,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="45" style="font-size: 0; line-height:45px;" class="brd_top">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;" class="brd_top">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
