--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -162,11 +162,12 @@
           max-height: inherit !important;
         }
         .full_img480 {
-          width: 100% !important;
-          height: auto !important;
-          border-top-left-radius: 8px !important;
-          border-top-right-radius: 8px !important;
-          border-bottom-left-radius: 0px !important;
+          width: 100%!important;
+          height: auto!important;
+          max-width: 100%!important;
+          border-top-left-radius: 8px!important;
+          border-top-right-radius: 8px!important;
+          border-bottom-left-radius: 0px!important;
         }
         .container480 {
           width: 100% !important;
@@ -406,7 +407,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="45" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                    <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
@@ -418,7 +419,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
+                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
                
                   <tr>
@@ -755,7 +756,7 @@
                   </tr>
            
                   <tr>
-                    <td height="60" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td align="center" valign="top">
@@ -832,7 +833,7 @@
                     </td>
                   </tr> -->
                   <tr>
-                    <td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td align="center" valign="top">
@@ -1081,7 +1082,7 @@
                           style="border-collapse: collapse;"
                         >
                           <tr>
-                            <td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                            <td height="45" style="font-size: 0; line-height:45px;">&nbsp;</td>
                           </tr>
                           <tr>
                             <td align="center" valign="top">
@@ -1110,8 +1111,8 @@
                   <!--<![endif]-->
         
 
-                  <tr>
-                    <td height="80" style="font-size: 0; line-height:50px;">&nbsp;</td>
+                  <tr class="mobile-hide">
+                    <td height="80" style="font-size: 0; line-height:80px;">&nbsp;</td>
                   </tr>
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
@@ -1134,7 +1135,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="45" style="font-size: 0; line-height:45px;" class="brd_top">&nbsp;</td>
+                    <td height="60" style="font-size: 0; line-height:60px;" class="brd_top">&nbsp;</td>
                   </tr>
                   <tr>
                     <td
