test enquiry contact host email

--- a/templates/enquiry-contact-host.html
+++ b/templates/enquiry-contact-host.html
@@ -431,11 +431,17 @@
                           <td align="left" valign="top" width="30%"><strong>Name:</strong></td>
                           <td align="left" valign="top">{{ guestName }}</td>
                         </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
+                        </tr>
                         <tr
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                         >
                           <td align="left" valign="top"><strong>Email:</strong></td>
                           <td align="left" valign="top">{{ guestEmail }}</td>
+                        </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
                         </tr>
                         <tr
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
@@ -443,11 +449,35 @@
                           <td align="left" valign="top"><strong>Phone:</strong></td>
                           <td align="left" valign="top">{{ guestPhone }}</td>
                         </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
+                        </tr>
+                        <tr
+                          style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
+                        >
+                          <td align="left" valign="top"><strong>Reason:</strong></td>
+                          <td align="left" valign="top">{{ reason }}</td>
+                        </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
+                        </tr>
+                        <tr
+                          style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
+                        >
+                          <td align="left" valign="top"><strong>People Quantity:</strong></td>
+                          <td align="left" valign="top">{{ peopleQuantity }}</td>
+                        </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
+                        </tr>
                         <tr
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                         >
                           <td align="left" valign="top"><strong>Message:</strong></td>
                           <td align="left" valign="top">{{ message }}</td>
+                        </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
                         </tr>
                         <tr
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
@@ -804,7 +834,7 @@
                                           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                                               <tr>
                                                   <td bgcolor="#2DA577" style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;" align="center">
-                                                      <a href="{{appLink}}/space/{{listingId}}" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Check availability</a></td>
+                                                      <a href="{{appLink}}/account/messages" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Manage my enquiries</a></td>
                                               </tr>
                                           </table>
                                       </td>
@@ -821,7 +851,7 @@
                           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                   <td bgcolor="#2DA577" style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;" align="center">
-                                      <a href="{{appLink}}/space/{{listingId}}" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Check availability</a></td>
+                                      <a href="{{appLink}}/account/messages" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Manage my enquiries</a></td>
                               </tr>
                           </table>
                       </td>
