--- a/templates/enquiry-contact-host.html
+++ b/templates/enquiry-contact-host.html
@@ -483,7 +483,7 @@
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                         >
                           <td align="left" valign="top"><strong>Requested:</strong></td>
-                          <td align="left" valign="top">{{ date }}&nbsp;{{ time }}</td>
+                          <td align="left" valign="top">{{ date }},&nbsp;{{ time }}</td>
                         </tr>
                       </table>
                     </td>
