--- a/templates/enquiry-contact-host.html
+++ b/templates/enquiry-contact-host.html
@@ -483,8 +483,14 @@
                           style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                         >
                           <td align="left" valign="top"><strong>Requested:</strong></td>
-                          <td align="left" valign="top">{{ date }},&nbsp;{{ time }}</td>
+                          <td align="left" valign="top">{{ date }}&nbsp;{{ time }}</td>
                         </tr>
+                        <tr
+                        style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
+                      >
+                        <td align="left" valign="top"><strong>Flexible time and date:</strong></td>
+                        <td align="left" valign="top">{{ hasFlexibleTime }}</td>
+                      </tr>
                       </table>
                     </td>
                   </tr>
