--- a/templates/enquiry-contact-host.html
+++ b/templates/enquiry-contact-host.html
@@ -485,6 +485,9 @@
                           <td align="left" valign="top"><strong>Requested:</strong></td>
                           <td align="left" valign="top">{{ date }}&nbsp;{{ time }}</td>
                         </tr>
+                        <tr>
+                          <td height="15" style="font-size: 0; line-height:15px;">&nbsp;</td>
+                        </tr>
                         <tr
                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                       >
