--- a/templates/inspection-notification-guest.html
+++ b/templates/inspection-notification-guest.html
@@ -446,7 +446,7 @@
                   <tr>
                     <td height="45" style="font-size: 0; line-height:40px;">&nbsp;</td>
                   </tr>
-   
+
                   <tr>
                     <td align="center" valign="top" style=" border: solid 1px #e6e6e6; border-radius: 8px;">
                       <a href="{{ appLink }}/space/{{ listingId }}">
@@ -795,7 +795,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ appLink }}account/message/{{ messageId }}?a=cancel-inspection"
+                                    href="{{ appLink }}/account/message/{{ messageId }}?a=cancel-inspection"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Cancel request</a
@@ -814,7 +814,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ appLink }}/space/{{listingId}}"
+                                    href="{{ appLink }}/space/{{ listingId }}"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Book the space</a
