--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -420,7 +420,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                     >
-                      Congratulations on starting your&nbsp;{{ listingTitle }}. With just a few more steps, you'll be
+                      Congratulations on starting your listing(s). With just a few more steps, you'll be
                       ready to receive your first booking requests.
                     </td>
                   </tr>
@@ -436,6 +436,7 @@
                       The space:
                     </td>
                   </tr>
+                  {{#each listings}}
                   <tr class="mobile-hide">
                     <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
                   </tr>
@@ -568,9 +569,7 @@
                                                                     style="padding-top: 5px"
                                                                   >
                                                                     <img
-                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{
-                                                                        category
-                                                                      }}.png"
+                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{ category }}.png"
                                                                       alt=""
                                                                       title=""
                                                                       width="25"
@@ -694,16 +693,6 @@
                                                           </tr>
                                                         </table>
                                                       </td>
-                                                      <!-- <td align="left" valign="middle">
-                                                        <img
-                                                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
-                                                                alt=""
-                                                                title=""
-                                                                width="63"
-                                                                style="outline: none"
-                                                                border="0"
-                                                                />
-                                                      </td> -->
                                                     </tr>
                                                   </table>
                                                 </td>
@@ -791,27 +780,26 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
-                  </tr>
-                  <tr>
                     <td align="center" valign="top">
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td
-                            bgcolor="#2DA577"
-                            style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
-                            align="center"
+                            align="right"
                           >
                             <a
                               href="{{ appLink }}/listing/preview/{{ listingId }}"
                               target="_blank"
-                              style="color: #ffffff; text-decoration: none; display: inline-block;"
+                              style="padding: 10px 25px; border-radius:8px; -webkit-border-radius: 8px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 14px; line-height: 24px; white-space: nowrap; color: #ffffff; text-decoration: none; display: inline-block; background-color: #2DA577;"
                               >Finish your listing</a
                             >
                           </td>
                         </tr>
                       </table>
                     </td>
+                  </tr>
+                  {{/each}}
+                  <tr>
+                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
                   <tr>
                     <td class="vspace35" height="1" style="font-size: 0; line-height:1px;">&nbsp;</td>
