--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -372,7 +372,7 @@
                               <tr>
                                 <td valign="top" align="left">
                                   <!--[if (gte mso 9)|(IE)]>
-                                    <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;"><tr><td align="center" valign="top"><![endif]-->
+                                  <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;"><tr><td align="center" valign="top"><![endif]-->
                                   <div style="width: 254px; display: inline-block; vertical-align: top;"
                                     class="container">
                                     <table width="244" align="left" cellpadding="0" cellspacing="0" border="0"
@@ -380,8 +380,8 @@
                                       <tr>
                                         <td class="pad_top15" align="center" valign="top"
                                           style="border-radius: 4px; -webkit-border-radius: 4px;">
-                                          <img src="{{ listingPhoto }}" alt="" title="" width="243"
-                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 180px;object-fit: cover;"
+                                          <img src="{{ listImage }}" alt="" title="" width="243"
+                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 189px;object-fit: cover;"
                                             border="0" class="full_img480" />
                                         </td>
                                       </tr>
@@ -410,19 +410,20 @@
                                                     <td align="center" valign="top"
                                                       style="border: 1px solid #CBCBCB; border-radius: 4px; display: inline-block;">
                                                       <table width="99" align="center" border="0" cellspacing="0"
-                                                        cellpadding="0" style="width: 99px;">
+                                                        cellpadding="0" style="width: auto;">
                                                         <tr>
-                                                          <td valign="top" align="center">
+                                                          <td valign="top" align="center" style="padding: 0 10px;">
                                                             <table align="center" cellpadding="0" cellspacing="0"
                                                               border="0" style="border-collapse: collapse;">
                                                               <tr>
-                                                                <td height="34" align="center" valign="middle">
+                                                                <td height="20" align="center" valign="middle"
+                                                                  style="padding-top: 5px">
                                                                   <img
-                                                                    src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_02.png"
-                                                                    alt="" title="" width="15" style="outline: none"
+                                                                    src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{category}}.png"
+                                                                    alt="" title="" width="25" style="outline: none"
                                                                     border="0" />
                                                                 </td>
-                                                                <td height="34" align="center" valign="middle"
+                                                                <td height="20" align="center" valign="middle"
                                                                   style="padding-top: 1px; color: #172439;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600;font-size: 12px; line-height: 14px;">
                                                                   <a href="#" target="_blank"
                                                                     style="color: #172439; text-decoration: none;">&nbsp;{{ category }}&nbsp;</a>
@@ -438,15 +439,19 @@
                                               </td>
                                             </tr>
                                             <tr>
-                                              <td align="left" valign="top"
-                                                style="padding: 13px 0px 7px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:14px; mso-line-height-rule:exactly;line-height:19px;color:#1F252A;">
-                                                {{ listingTitle }}
+                                              <td align="left" valign="top" class="width_mob" style="padding: 13px 0px 7px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:14px; mso-line-height-rule:exactly;line-height:19px;color:#1F252A;
+                                                      white-space: nowrap;
+                                                      overflow: hidden !important;
+                                                      text-overflow: ellipsis;
+                                                      width: 300px;
+                                                      display: inline-block;">
+                                                {{ listTitle }}
                                               </td>
                                             </tr>
                                             <tr>
                                               <td align="left" valign="top"
                                                 style="padding: 0px 0px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:13px; mso-line-height-rule:exactly;line-height:17px;color:#1F252A;">
-                                                {{ listingAddress }}
+                                                {{ listAddress }}
                                               </td>
                                             </tr>
 
@@ -460,16 +465,15 @@
                                                       <table align="left" cellpadding="0" cellspacing="0" border="0"
                                                         style="border-collapse: collapse;">
                                                         <tr>
-
+                                                          <td align="left" valign="middle"
+                                                            style="padding-right: 4px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:12px; font-weight: bold; mso-line-height-rule:exactly;line-height:15px;color:#1F252A;">
+                                                            {{capacity}}</td>
                                                           <td align="left" valign="middle">
                                                             <img
-                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/person.png"
-                                                              alt="" title="" width="12" style="outline: none"
+                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/person1.png"
+                                                              alt="" title="" width="14" style="outline: none"
                                                               border="0" />
                                                           </td>
-                                                          <td align="left" valign="middle"
-                                                            style="padding-right: 4px; padding-left: 4px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:9px; font-weight: bold; mso-line-height-rule:exactly;line-height:15px;color:#1F252A;">
-                                                            10</td>
                                                         </tr>
                                                       </table>
                                                     </td>
@@ -485,15 +489,20 @@
                                                           </td>
                                                           <td align="left" valign="middle"
                                                             style="padding-left: 4px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:12px; font-weight: bold; mso-line-height-rule:exactly;line-height:15px;color:#1F252A;">
-                                                            4 hours</td>
+                                                            {{minimumTerm}}&nbsp;{{term}}</td>
                                                         </tr>
                                                       </table>
                                                     </td>
-                                                    <td align="left" valign="middle">
+                                                    <!-- <td align="left" valign="middle">
                                                       <img
-                                                        src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
-                                                        alt="" title="" width="63" style="outline: none" border="0" />
-                                                    </td>
+                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
+                                                              alt=""
+                                                              title=""
+                                                              width="63"
+                                                              style="outline: none"
+                                                              border="0"
+                                                              />
+                                                    </td> -->
                                                   </tr>
                                                 </table>
                                               </td>
@@ -516,14 +525,16 @@
                                                         style="border-collapse: collapse;">
                                                         <tr>
                                                           <td align="center" valign="middle">
-                                                            <img
-                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/image.png"
-                                                              alt="" title="" width="26" style="outline: none"
-                                                              border="0" />
+                                                            <img src="{{hostPhoto}}" alt="" title="" width="26" style="outline: none;
+                                                                     border-radius: 50%;
+                                                                    width: 20px;
+                                                                    height: 20px;
+                                                                    object-fit: cover;
+                                                                    margin-top: 3px;" border="0" />
                                                           </td>
                                                           <td align="center" valign="middle"
                                                             style="padding: 5px 5px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:10px; mso-line-height-rule:exactly;line-height:13px;color:#1F252A;">
-                                                            Name
+                                                            {{hostName}}
                                                           </td>
                                                         </tr>
                                                       </table>
@@ -546,7 +557,7 @@
 
                                   </div>
                                   <!--[if (gte mso 9)|(IE)]></td></tr>
-                                  </table> <![endif]-->
+                                </table> <![endif]-->
                                 </td>
                               </tr>
                             </table>
