--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -206,6 +206,20 @@
         width: 37px !important;
         height: auto !important;
       }
+
+      .full_img480 {
+        width: 100% !important;
+        height: auto !important;
+        max-width: 100% !important;
+        border-top-left-radius: 8px !important;
+        border-top-right-radius: 8px !important;
+        border-bottom-left-radius: 0px !important;
+      }
+
+      .container480 {
+        width: 100% !important;
+        text-align: center !important;
+      }
     }
 
     @media only screen and (max-width: 480px) {
